5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2573.log
== SUBMITION (2019-06-11 16:48:53) 
-- CODE:
wern ihn mir hvërn ?

strinchubisq 
-- EXECUTION TIME:
0.902282
-- ERROR:
  File "/home/codebench/codes/1807/2573/main.py", line 1
    wern ihn mir hv\xebrn ?
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:57) 
-- CODE:
wern ihn mir hvërn ?

strinchubisq !
-- ERROR:
File "XXXX", line 1
    wern ihn mir hvërn ?
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:54:48) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:55:26) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

print(round(imc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:15) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18,5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
-- ERROR:
File "XXXX", line 13
    if 18,5>=imc[i]<=24.99:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:15) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18,5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
-- ERROR:
File "XXXX", line 13
    if 18,5>=imc[i]<=24.99:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:36) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18,5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
File "XXXX", line 13
    if 18,5>=imc[i]<=24.99:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:56) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18,5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
File "XXXX", line 16
    if 18,5>=imc[i]<=24.99:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:16) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:16) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:16) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:16) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:16) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:07:19) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"
for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
-- EXECUTION TIME:
1.32499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 9, in <module>
    imc[i]=round(imc,2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:36) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:40) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:07:52) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(imc)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:17) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:09:59) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:04) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:36) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	imc[i]=round(imc,2)
print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:11:01) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

print(imc)
for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:11:11) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:11:47) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:06) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:11) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:12:32) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- EXECUTION TIME:
1.19588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 8, in <module>
    for i in range(size(x)):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:33) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:12:51) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(x)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:13:08) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:13:35) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)

for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:15:33) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range/(size(imc)):
	imc[i]=round(imc[i],2)
for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:16:07) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range/(size(imc)):
	imc=round(imc,2)
for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:16:50) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)

for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:17:36) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)

for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(min(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:17:59) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)

for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(min(a))

-- EXECUTION TIME:
1.10128
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:18:42) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)

for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"

print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:19:01) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)

for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:19:37) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=zeros(7)
for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:20:09) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=zeros(7,dtype=input)
for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:21:43) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- EXECUTION TIME:
1.11086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2573/main.py", line 18, in <module>
    a[i]="ACIMA DO PESO"
TypeError: 'int' object does not support item assignment

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:21:44) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]==17:
		a[i]="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a[i]="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a[i]="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a[i]="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a[i]="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a[i]="OBESIDADE SEVERA"
	if imc[i]>40:
		a[i]="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(max(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:22:56) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>=imc[i]<=18.49:
		a="ABAIXO DO PESO"
	if 18.5>=imc[i]<=24.99:
		a="PESO NORMAL"
	if 25>=imc[i]<=29.99:
		a="ACIMA DO PESO"
	if 30>=imc[i]<=34.99:
		a="OBESIDADE"
	if 35 >= imc[i]<= 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:24:09) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]==17:
		a="MUITO ABAIXO DO PESO"
	if 17>imc[i]<18.49:
		a="ABAIXO DO PESO"
	if 18.5>imc[i]<24.99:
		a="PESO NORMAL"
	if 25>imc[i]<29.99:
		a="ACIMA DO PESO"
	if 30>imc[i]<34.99:
		a="OBESIDADE"
	if 35 > imc[i]< 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:25:46) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]<7:
		a="MUITO ABAIXO DO PESO"
	if 17>imc[i]<18.49:
		a="ABAIXO DO PESO"
	if 18.5>imc[i]<24.99:
		a="PESO NORMAL"
	if 25>imc[i]<29.99:
		a="ACIMA DO PESO"
	if 30>imc[i]<34.99:
		a="OBESIDADE"
	if 35 > imc[i]< 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
0.923926
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
OBESIDADE SEVERA
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
OBESIDADE SEVERA
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:25:47) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]<7:
		a="MUITO ABAIXO DO PESO"
	if 17>imc[i]<18.49:
		a="ABAIXO DO PESO"
	if 18.5>imc[i]<24.99:
		a="PESO NORMAL"
	if 25>imc[i]<29.99:
		a="ACIMA DO PESO"
	if 30>imc[i]<34.99:
		a="OBESIDADE"
	if 35 > imc[i]< 39.99:
		a="OBESIDADE SEVERA"
	if imc[i]>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:28:11) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if imc[i]<7:
		print("MUITO ABAIXO DO PESO")
	if 17>imc[i]<18.49:
		print("ABAIXO DO PESO")
	if 18.5>imc[i]<24.99:
		print("PESO NORMAL")
	if 25>imc[i]<29.99:
		print("ACIMA DO PESO")
	if 30>imc[i]<34.99:
		print("OBESIDADE")
	if 35 > imc[i]< 39.99:
		print("OBESIDADE SEVERA")
	if imc[i]>40:
		print("OBESIDADE MORBIDA")


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:18:01) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if 17>max(imc)<18.49:
		a="ABAIXO DO PESO"
	if 18.5>max(imc)<24.99:
		a="PESO NORMAL"
	if 25>max(imc)<29.99:
		a="ACIMA DO PESO"
	if 30>max(imc)<34.99:
		a="OBESIDADE"
	if 35 > max(imc)< 39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
1.18867
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
OBESIDADE SEVERA
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
OBESIDADE SEVERA
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:18:06) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if 17>max(imc)<18.49:
		a="ABAIXO DO PESO"
	if 18.5>max(imc)<24.99:
		a="PESO NORMAL"
	if 25>max(imc)<29.99:
		a="ACIMA DO PESO"
	if 30>max(imc)<34.99:
		a="OBESIDADE"
	if 35 > max(imc)< 39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
1.16626
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
OBESIDADE SEVERA
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
OBESIDADE SEVERA
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:18:20) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if 17>max(imc)<18.49:
		a="ABAIXO DO PESO"
	if 18.5>max(imc)<24.99:
		a="PESO NORMAL"
	if 25>max(imc)<29.99:
		a="ACIMA DO PESO"
	if 30>max(imc)<34.99:
		a="OBESIDADE"
	if 35 > max(imc)< 39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:23:25) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
1.16451
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:23:32) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
1.64053
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:23:32) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
2.13269
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:55:42) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:56:17) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:56:28) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:56:43) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:57:56) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:59:31) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:59:50) 
-- CODE:
from numpy import*

p=array(eval(input("")))
al=array(eval(input("")))

imc=p/(al*al)
for i in range(size(imc)):
	imc[i]=round(imc[i],2)
a=0
for i in range(size(p)):
	if max(imc)<7:
		a="MUITO ABAIXO DO PESO"
	if max(imc)> 17 and max(imc)<18.49:
		a="ABAIXO DO PESO"
	if max(imc)> 18.5 and max(imc)<24.99:
		a="PESO NORMAL"
	if max(imc)> 25 and max(imc)<29.99:
		a="ACIMA DO PESO"
	if max(imc)> 30 and max(imc)<34.99:
		a="OBESIDADE"
	if max(imc)> 35 and max(imc)<39.99:
		a="OBESIDADE SEVERA"
	if max(imc)>40:
		a="OBESIDADE MORBIDA"


print(imc)
print("O MAIOR IMC DA TURMA EH:",max(imc))
print(a)

-- EXECUTION TIME:
1.2414
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
